# ulco-gl2-etudiant

./: .gitignore  README.md
tp-clientserver/cpp/broadcast/: server.cpp
tp-clientserver/cpp/chat/: Net.hpp  client.cpp  server.cpp
tp-ffi/py-fibo1/mypackage/: myfibo.py
tp-ffi/py-fibo1/scripts/: main.py
tp-ffi/py-fibo2/cpp/: myfibo.cpp
tp-ffi/py-fibo2/scripts/: main1.py  main2.py  main3.py
tp-ffi/py-logger/cpp/: Logger.cpp  LoggerBinding.cpp
tp-ffi/py-logger/scripts/: main1.py
tp-mvc/naze-cpp/src/: Board.cpp  Board.hpp
tp-mvc/todolist-cpp/: CMakeLists.txt  README.md
tp-mvc/todolist-cpp/app/: main.cpp
tp-mvc/todolist-cpp/include/todolist-cpp/: Board.hpp  View.hpp
tp-mvc/todolist-cpp/src/todolist-cpp/: Board.cpp  Task.cpp  View.cpp
tp-mvc/todolist-cpp/test/todolist-cpp/: Board-test.cpp  View-test.cpp
tp-refactoring/log-cpp/: main1.cpp  main2.cpp
tp-refactoring/log-hs/app/: Main.hs
tp-refactoring/mul2js/: index2.html  index3.html  script3.js
tp-refactoring/sqrt-hs/app/: Main.hs
tp-refactoring/sqrt-hs/src/: Lib.hs
tp-refactoring/sqrt-hs/test/: LibSpec.hs
tp-refactoring/store1/: store1.cpp
tp-solid/board/src/: Board.hpp  Report.hpp  Reportable.hpp  Titleable.hpp  main.cpp
tp-solid/canevas/src/: Canevas.cpp  Descriptible.hpp  Forme.cpp  Forme.hpp
tp-workflow/cpp/src/: Tictactoe.cpp  Tictactoe.hpp  TictactoeBinding.cpp  TictactoeTest.cpp  mainpage.hpp  tictactoe-cli.cpp
tp-workflow/scripts/: tictactoe_gui.py
